[package]
name = "webp-convert-api"
version = "0.1.0"
authors = ["Christian Visintin <christian.visintin@veeso.dev>"]
edition = "2021"
categories = ["network-programming"]
description = ""
homepage = "https://github.com/veeso-dev/webp-convert-api"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]
keywords = []
license = "MIT"
readme = "README.md"
repository = "https://github.com/veeso-dev/webp-convert-api"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "webp-convert-api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
anyhow = "1"
argh = "0.1"
envy = "0.4"
image = "0.25"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["io-std", "net", "fs"] }
tracing = "^0.1"
tracing-subscriber = "^0.3"

[dev-dependencies]
actix-rt = "^2"
env_logger = "^0.11"
pretty_assertions = "^1"
